--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>kafka-topic-explorer-wizard</title>
-    <meta name="description" content="Lovable Generated Project" />
+    <meta name="description" content="Lovable Generated Project Not" />
     <meta name="author" content="Lovable" />
 
     <meta property="og:title" content="kafka-topic-explorer-wizard" />
